fix: truncate and scrollbar

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -14,6 +14,7 @@ input[type=submit] {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  white-space: nowrap;
 }
 
 .two-line {
@@ -24,6 +25,7 @@ input[type=submit] {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+  white-space: nowrap;
 }
 
 .blue-link {
