--- a/app/assets/stylesheets/base/homePage.scss
+++ b/app/assets/stylesheets/base/homePage.scss
@@ -458,11 +458,6 @@
   text-transform: uppercase;
   margin-bottom: 5px;
   letter-spacing: 0.025em;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .hcpDesc {
@@ -473,11 +468,6 @@
 
 .hcpDesc p {
   margin:0;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .hcpMsg, .hcpConnect {
