--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -69,6 +69,7 @@
   margin-right: 10px;
   margin-bottom: 10px;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .searchTag:last-child, .spendingTag:last-child {
